Checkpoint before porting Outernet repo
